# scarlet

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.MD  README.md  api.org  changelist.org  color_distance.md  colorize.html  gamuts.md  html_color_reader.rs  planning.org  planning.org~
src/: #color.rs#  bound.rs  cie-1931-standard-matching.csv  color.rs  color.rs~  color_funcs.rs  color_names  color_names~  color_parsing.rs  colormap.rs  colorpoint.rs  consts.rs  coord.rs  csscolor.rs  cssnumeric.rs  euclidean_distance.rs  illuminants.rs  lib.rs  main.rs~  material_colors.rs  matplotlib_cmaps.rs  mix.rs  prelude.rs  visual_gamut.rs
src/colors/: adobergbcolor.rs  ciehclcolor.rs  cielabcolor.rs  cielabcolor.rs~  cielchcolor.rs  cielchuvcolor.rs  cieluvcolor.rs  hslcolor.rs  hsvcolor.rs  mod.rs  mod.rs~  rommrgbcolor.rs
