[package]
name = "scarlet"
description = "Colors and color spaces made simple"
version = "1.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
license = "Apache-2.0"
readme = "README.MD"
repository = "https://github.com/nicholas-miklaucic/scarlet"
keywords = ["color", "rgb", "image", "visualization"]
categories = ["multimedia::images", "visualization", "data-structures"]

[package.metadata.docs.rs]

[features]
# By default, don't include terminal support so it's WASM-compatible
default = []

# For terminal support (e.g., printing colors to a terminal)
terminal = ["termion"]


[dependencies]
regex = "1.4.3"
num = "0.3.1"
float-cmp = "0.8.0"
csv = "1.1.5"
serde = "1.0.120"
serde_derive = "1.0.120"
geo = "0.17.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
termion = { version = "1.5.5", optional = true }
