[package]
name = "scarlet"
description = "Colors and color spaces made simple"
version = "1.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
license = "Apache-2.0"
readme = "README.MD"
repository = "https://github.com/nicholas-miklaucic/scarlet"
keywords = ["color", "rgb", "image", "visualization"]
categories = ["multimedia::images", "visualization", "data-structures"]

[package.metadata.docs.rs]

[features]
# By default, don't include terminal support so it's WASM-compatible
default = []

# For terminal support (e.g., printing colors to a terminal)
terminal = ["termion"]


[dependencies]
regex = "1.9.1"
num = "0.4.0"
float-cmp = "0.9.0"
csv = "1.2.2"
serde = "1.0.171"
serde_derive = "1.0.171"
geo = "0.25.1"
maplit = "1.0.2"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
termion = { version = "2.0.1", optional = true }
